<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_sections" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/action_groups" />
        <item
            android:id="@+id/nav_balance"
            android:icon="@drawable/ic_poll_black_24dp"
            android:title="@string/action_balance" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>
    <group android:id="@+id/nav_auth" android:checkableBehavior="none">
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/logout">

        </item>
    </group>
    <group android:id="@+id/nav_extras" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/ic_supervisor_account_black_24dp"
            android:title="@string/action_invite" />

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/action_info" />
    </group>

</menu>
