<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <!--<ImageView
            android:id="@+id/iv_scontrino"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center|top" />-->

        <ImageView
            android:id="@+id/iv_payment_image"
            android:visibility="gone"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/payment_image"
            android:src="@drawable/image_placeholder" />

        <Button
            android:id="@+id/btn_payment_image"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/select_image"
            android:theme="@style/addPic" />

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_payment_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:hint="@string/payment_description"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <!--<TextView
            android:id="@+id/tv_messagePayment"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:text="@string/note" />

        <EditText
            android:id="@+id/et_messagePayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:hint="Message Payment"
            android:inputType="textPersonName" />-->


    </LinearLayout>

    <Button
        android:id="@+id/btn_payment_add"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/pay"
        android:textColor="@color/icons" />

</LinearLayout>