<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_new_expense_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:hint="@string/hint_expense_name"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <!--<EditText
                android:id="@+id/et_name_expense"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_expense_name" />-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_new_expense_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:hint="@string/hint_expense_description"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>

            <!--<EditText
                android:id="@+id/et_expense_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_expense_description" />-->


            <CheckBox
                android:id="@+id/cb_proposal_step"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/text_proposal_step" />

            <LinearLayout
                android:id="@+id/ll_waiting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_image_waiting"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="start"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:contentDescription="@string/expense_creation_image"
                        android:src="@drawable/image_placeholder" />


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/ti_waiting_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center"
                        android:layout_marginEnd="8dp"
                        android:hint="@string/hint_item_name"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>
                    <!--<EditText
                        android:id="@+id/et_name_waiting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center"
                        android:layout_marginEnd="8dp"
                        android:ems="10"
                        android:hint="@string/hint_item_name"
                        android:inputType="textPersonName" />-->


                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_waiting_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/hint_item_description"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"/>
                </android.support.design.widget.TextInputLayout>
                <!--<EditText
                    android:id="@+id/et_description_waiting"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_item_description" />-->

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_waiting_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/hint_item_price"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>
                <!--<EditText
                    android:id="@+id/et_price_waiting"
                    android:inputType="numberDecimal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_item_price" />-->


            </LinearLayout>

            <Button
                android:id="@+id/btn_datePicker"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:background="@color/colorAccent"
                android:padding="8dp"
                android:text="@string/text_select_deadline"
                android:textColor="@color/icons"
                android:visibility="gone" />

            <!--<com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/spinner_expense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_refund_policy"
                android:textColorHint="#05ab9a"
                android:visibility="gone"
                app:met_floatingLabel="normal" />-->

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_add_expense"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_gravity="center|bottom"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:padding="8dp"
                    android:text="@string/add_expense"
                    android:textColor="@color/cardview_light_background" />
            </FrameLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>

</FrameLayout>