<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/img_new_proposal_fragment"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_gravity="start"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:contentDescription="@string/new_proposal_image_cont_desc"
                    android:src="@drawable/image_placeholder" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_new_prop_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/hit_proposal_name"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <!--<EditText
                    android:id="@+id/et_new_prop_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:layout_marginEnd="8dp"
                    android:ems="10"
                    android:hint="@string/hit_proposal_name"
                    android:inputType="textPersonName" />-->


            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_new_prop_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_margin="8dp"
                android:hint="@string/hint_proposal_description"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <!--<EditText
                android:id="@+id/et_new_prop_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_proposal_description" />-->


            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_new_prop_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_margin="8dp"
                android:hint="@string/hint_proposal_price"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <!--<EditText
                android:id="@+id/et_new_prop_proposal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_proposal_price"
                android:inputType="numberDecimal"
                android:maxLines="1" />-->


        </LinearLayout>

        <Button
            android:id="@+id/btn_add_proposal"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center|bottom"
            android:layout_margin="16dp"
            android:background="@color/colorAccent"
            android:padding="8dp"
            android:text="@string/add_proposal"
            android:textColor="@color/cardview_light_background" />


    </android.support.v7.widget.CardView>

</FrameLayout>